# ESP32S3

./: .gitignore  .gitmodules  CMakeLists.txt  custom.csv  format_src.sh  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  MjpegClass.h  i2c_port.c  i2c_port.h  main.cpp
main/APP/: App.cpp  Version.h
main/APP/Common/DataProc/: DP_Button.cpp  DP_Clock.cpp  DP_Power.cpp  DataProc.cpp  DataProc.h
main/APP/Common/HAL/: HAL.h  HAL_Def.h
main/APP/Pages/: AppFactory.cpp  Page.h
main/APP/Pages/Dialplate/: Dialplate.cpp  DialplateModel.cpp  DialplateModel.h  DialplateView.cpp  DialplateView.h
main/APP/Pages/Heartbeat_Measuing/: Heartbeat_Measuing.cpp
main/APP/Pages/Image_Player/: Image_Player.cpp  Image_Player_Model.cpp  Image_Player_View.cpp
main/APP/Pages/Setting/: Setting.cpp  Setting_View.cpp
main/APP/Pages/StartUp/: StartUp.cpp
main/APP/Pages/StatusBar/: StatusBar.cpp
main/APP/Pages/StopWatch/: StopWatch.cpp  StopWatch_View.h
main/APP/Pages/SystemInfos/: SystemInfos.cpp  SystemInfosModel.h  SystemInfosView.cpp
main/APP/Pages/Test_Page/: Test_Page.cpp  Test_Page_Model.h  Test_Page_View.h
main/APP/Pages/Video_Player/: Video_Player.cpp  Video_Player.h  Video_Player_Model.cpp  Video_Player_Model.h  Video_Player_View.h
main/APP/Resource/: ResourcePool.cpp
main/HAL/: HAL.cpp  HAL_Button.cpp  HAL_Clock.cpp  HAL_Config.h  HAL_IMU.cpp  HAL_Motor.cpp  HAL_PMU.cpp  HAL_SD_Card.cpp
main/Platform/: i2c_port.c  i2c_port.h
main/lvgl_port/: lv_port_disp.c  lv_port_disp.cpp  lv_port_disp.h  lv_port_indev.cpp  lv_port_indev.h
(+194 files in other folders)
